# p3hull-lab

./: .gitignore  LICENSE  README.md  benchmark_results.csv  benchmark_tgf_results.csv  pyproject.toml  requirements.txt
data/tgf/: 059.tgf  tree.tgf
experiments/: benchmark.ipynb  enhanced_benchmark.py  evaluation.py  full_eval_tgf.py
p3hull/: __init__.py  algorithms.py  generators.py
